some initial analyses of common tweets :] pt 2

--- a/Ben-EDA.ipynb
+++ b/Ben-EDA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "efc04e84",
+   "id": "acbe2505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "35441955",
+   "id": "4120c29a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "da2c8e73",
+   "id": "506eaa38",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "7d63aac2",
+   "id": "b59efe07",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "29a7f26b",
+   "id": "97838fcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "ab1c0e85",
+   "id": "24466f40",
    "metadata": {},
    "outputs": [
     {
@@ -231,8 +231,10 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "8394489f",
-   "metadata": {},
+   "id": "cbfcfa0f",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -392,14 +394,14 @@
     }
    ],
    "source": [
-    "# remove everything that begins with RT as this is commonly used as 'retweet' by twitter users\n",
+    "# remove the RT in tweets, as this is commonly used as 'retweet' by twitter users\n",
     "dat[dat.text.str.contains('RT')]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f59d2a61",
+   "id": "22f05bfa",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9ec6a514",
+   "id": "85a37aa6",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b548babb",
+   "id": "073e04b8",
    "metadata": {},
    "source": [
     "# reference\n",
@@ -744,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6ff4a7dd",
+   "id": "d9aad92c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "712b1b05",
+   "id": "ef0da0f6",
    "metadata": {},
    "outputs": [],
    "source": []
