--- a/EK_EDA.ipynb
+++ b/EK_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOlsC2uVGvqSfpIVmQSE3ZN",
+      "authorship_tag": "ABX9TyNgIbSUxNfO5AzNd7LFuS5E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,9 +40,10 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "import re"
       ],
-      "execution_count": 23,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -402,12 +403,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PROdfV_uAU0R",
-        "outputId": "93ae99f4-03ea-4c1a-99bc-da24b56eeb24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "id": "PROdfV_uAU0R",
+        "outputId": "93ae99f4-03ea-4c1a-99bc-da24b56eeb24"
       },
       "source": [
         "#create a flag for duplicate tweets\n",
@@ -576,12 +577,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L52TuADNBtsq",
-        "outputId": "5b034357-6339-4c7b-a52b-a1ab2f1012ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 450
-        }
+          "height": 552
+        },
+        "id": "L52TuADNBtsq",
+        "outputId": "5b034357-6339-4c7b-a52b-a1ab2f1012ab"
       },
       "source": [
         "#look for most common duplicate tweet\n",
@@ -694,12 +695,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LEbf6iiiEyCi",
-        "outputId": "a3d561eb-693f-4265-b5c4-806f18fbc65c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "id": "LEbf6iiiEyCi",
+        "outputId": "a3d561eb-693f-4265-b5c4-806f18fbc65c"
       },
       "source": [
         "#check if duplicates are classified the same way\n",
@@ -862,13 +863,62 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fn_1UBKECAcu"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "id": "fn_1UBKECAcu",
+        "outputId": "60969a3e-705f-4e27-dc6b-a7bf97cbd2de"
       },
       "source": [
-        "#data cleaning "
+        "#CREDIT TO SOURCES: \n",
+        "#https://towardsdatascience.com/regex-essential-for-nlp-ee0336ef988d\n",
+        "\n",
+        "#data cleaning \n",
+        "\n",
+        "def text_clean(text):\n",
+        "  #remove line breaks\n",
+        "  text = re.sub(r\"\\n\",\"\",text)\n",
+        "\n",
+        "  #convert to lowercase \n",
+        "  text = text.lower()\n",
+        "\n",
+        "  #remove digits and currencies \n",
+        "  text = re.sub(r\"\\d+\",\"\",text) \n",
+        "  text = re.sub(r'[\\$\\d+\\d+\\$]', \"\", text)      \n",
+        "\n",
+        "  #remove dates \n",
+        "  text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
+        "  text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
+        "  text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
+        "\n",
+        "  #remove non-ascii\n",
+        "  text = re.sub(r'[^\\x00-\\x7f]',r' ',text) \n",
+        "\n",
+        "  #remove punctuation\n",
+        "  text = re.sub(r'[^\\w\\s]','',text) \n",
+        "\n",
+        "  #remove hyperlinks\n",
+        "  text = re.sub(r'https?:\\/\\/.*[\\r\\n]*', '', text)\n",
+        "\n",
+        "  #replace extra whitespaces with a single one \n",
+        "  text = re.sub(re.sub(' +', ' ', text)\n",
+        "\n",
+        "  return text\n",
+        "\n",
+        "train_data['clean_text'] = train_data['text'].apply(lambda x : text_clean(x))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-134-23200ad771ac>\"\u001b[0;36m, line \u001b[0;32m34\u001b[0m\n\u001b[0;31m    return text\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     }
   ]
 }
