--- a/EK_EDA.ipynb
+++ b/EK_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNgIbSUxNfO5AzNd7LFuS5E",
+      "authorship_tag": "ABX9TyPgUpDLKSeK+mNT9LVfzaQf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -863,12 +863,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
-        },
-        "id": "fn_1UBKECAcu",
-        "outputId": "60969a3e-705f-4e27-dc6b-a7bf97cbd2de"
+        "id": "fn_1UBKECAcu"
       },
       "source": [
         "#CREDIT TO SOURCES: \n",
@@ -902,21 +897,196 @@
         "  text = re.sub(r'https?:\\/\\/.*[\\r\\n]*', '', text)\n",
         "\n",
         "  #replace extra whitespaces with a single one \n",
-        "  text = re.sub(re.sub(' +', ' ', text)\n",
-        "\n",
+        "  #text = re.sub(re.sub(' +', ' ', text)\n",
         "  return text\n",
         "\n",
-        "train_data['clean_text'] = train_data['text'].apply(lambda x : text_clean(x))\n"
+        "\n",
+        "train_data['clean_text'] = train_data['text'].apply(lambda x : text_clean(x))"
       ],
-      "execution_count": 134,
+      "execution_count": 139,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nc6NQykHW0Z0",
+        "outputId": "33083d2a-ca0b-4251-f895-2c554e9ebec6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 708
+        }
+      },
+      "source": [
+        "train_data"
+      ],
+      "execution_count": 140,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-134-23200ad771ac>\"\u001b[0;36m, line \u001b[0;32m34\u001b[0m\n\u001b[0;31m    return text\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>keyword</th>\n",
+              "      <th>location</th>\n",
+              "      <th>text</th>\n",
+              "      <th>target</th>\n",
+              "      <th>duplicate_tweet</th>\n",
+              "      <th>clean_text</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>no</td>\n",
+              "      <td>our deeds are the reason of this earthquake ma...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Forest fire near La Ronge Sask. Canada</td>\n",
+              "      <td>1</td>\n",
+              "      <td>no</td>\n",
+              "      <td>forest fire near la ronge sask canada</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>5</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>All residents asked to 'shelter in place' are ...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>no</td>\n",
+              "      <td>all residents asked to shelter in place are be...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>6</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>13,000 people receive #wildfires evacuation or...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>no</td>\n",
+              "      <td>people receive wildfires evacuation orders in...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>7</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Just got sent this photo from Ruby #Alaska as ...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>no</td>\n",
+              "      <td>just got sent this photo from ruby alaska as s...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7608</th>\n",
+              "      <td>10869</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Two giant cranes holding a bridge collapse int...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>no</td>\n",
+              "      <td>two giant cranes holding a bridge collapse int...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7609</th>\n",
+              "      <td>10870</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>@aria_ahrary @TheTawniest The out of control w...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>aria_ahrary thetawniest the out of control wil...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7610</th>\n",
+              "      <td>10871</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>M1.94 [01:04 UTC]?5km S of Volcano Hawaii. htt...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>m  utckm s of volcano hawaii httptcozdtoydebj</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7611</th>\n",
+              "      <td>10872</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Police investigating after an e-bike collided ...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>police investigating after an ebike collided w...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7612</th>\n",
+              "      <td>10873</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>The Latest: More Homes Razed by Northern Calif...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>no</td>\n",
+              "      <td>the latest more homes razed by northern califo...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>7613 rows × 7 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         id  ...                                         clean_text\n",
+              "0         1  ...  our deeds are the reason of this earthquake ma...\n",
+              "1         4  ...              forest fire near la ronge sask canada\n",
+              "2         5  ...  all residents asked to shelter in place are be...\n",
+              "3         6  ...   people receive wildfires evacuation orders in...\n",
+              "4         7  ...  just got sent this photo from ruby alaska as s...\n",
+              "...     ...  ...                                                ...\n",
+              "7608  10869  ...  two giant cranes holding a bridge collapse int...\n",
+              "7609  10870  ...  aria_ahrary thetawniest the out of control wil...\n",
+              "7610  10871  ...      m  utckm s of volcano hawaii httptcozdtoydebj\n",
+              "7611  10872  ...  police investigating after an ebike collided w...\n",
+              "7612  10873  ...  the latest more homes razed by northern califo...\n",
+              "\n",
+              "[7613 rows x 7 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
         }
       ]
     }
