--- a/EK_EDA.ipynb
+++ b/EK_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPgUpDLKSeK+mNT9LVfzaQf",
+      "authorship_tag": "ABX9TyOd0Zk5wVR2dbh11+6GPsKQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,9 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "import re"
+        "import re\n",
+        "\n",
+        "from sklearn.feature_extraction.text import CountVectorizer"
       ],
       "execution_count": 129,
       "outputs": []
@@ -342,6 +344,9 @@
         "outputId": "8425c2ec-78bb-4cba-a39e-2492e6b8d905"
       },
       "source": [
+        "#CREDIT TO SOURCES: \n",
+        "#https://stackoverflow.com/questions/28931224/adding-value-labels-on-a-matplotlib-bar-chart \n",
+        "\n",
         "#explore distribution of dataset \n",
         "\n",
         "sns.countplot(x = train_data['target'], palette = 'rocket')\n",
@@ -411,6 +416,9 @@
         "outputId": "93ae99f4-03ea-4c1a-99bc-da24b56eeb24"
       },
       "source": [
+        "#CREDIT TO SOURCES: \n",
+        "#https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.duplicated.html \n",
+        "\n",
         "#create a flag for duplicate tweets\n",
         "df = train_data\n",
         "df['duplicate_tweet'] = np.where(df['text'].duplicated(keep=False), 'yes', 'no')"
@@ -909,12 +917,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nc6NQykHW0Z0",
-        "outputId": "33083d2a-ca0b-4251-f895-2c554e9ebec6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 708
-        }
+        },
+        "id": "nc6NQykHW0Z0",
+        "outputId": "33083d2a-ca0b-4251-f895-2c554e9ebec6"
       },
       "source": [
         "train_data"
