--- a/EK_EDA.ipynb
+++ b/EK_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPs8BQpwlvEJbT3RWK01CM7",
+      "authorship_tag": "ABX9TyO+Xr1E3vHw8ruYHT/Pv8w0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1139,9 +1139,7 @@
         "ldf['country'] = country\n",
         "ldf['target'] = df['target']\n",
         "ldf\n",
-        "#print(ldf.to_string())\n",
-        "\n",
-        "\n"
+        "#print(ldf.to_string())\n"
       ],
       "execution_count": 70,
       "outputs": [
@@ -1269,12 +1267,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fQ0YY2WKK7_I",
-        "outputId": "c82995ac-e394-45a2-bc7f-0cc409616a36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 623
-        }
+        },
+        "id": "fQ0YY2WKK7_I",
+        "outputId": "c82995ac-e394-45a2-bc7f-0cc409616a36"
       },
       "source": [
         "#visualize data \n",
@@ -1313,12 +1311,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q6AZ78BpQ-Gh",
-        "outputId": "7d6a3e37-ac71-4f93-c534-75328ea4bd86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "id": "q6AZ78BpQ-Gh",
+        "outputId": "7d6a3e37-ac71-4f93-c534-75328ea4bd86"
       },
       "source": [
         "#segment and plot by tweet type\n",
@@ -1358,17 +1356,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "D5dPyqTBW14u"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "VskJVf14kDSM"
@@ -1383,6 +1370,10 @@
         "*   The training set shows an imbalance between classification types (i.e. tweet is/is not about a disaster) \n",
         "*   There are 110 duplicate tweets in the training set\n",
         "*   Duplicate tweets are not always classified in the same way\n",
+        "*   Location data is not in a standard format\n",
+        "*   After attempting to clean the location data, the majority of tweets cannot be categorized by their country accurately. Most tweets irrespective of their classification stem from the United States, which likely a function of where Twitter's active user base lies vs. where the most disasters occur. \n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
