--- a/Ben-EDA.ipynb
+++ b/Ben-EDA.ipynb
@@ -47,6 +47,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 148,
+   "id": "3bc8bf05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>keyword</th>\n",
+       "      <th>location</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1631</th>\n",
+       "      <td>5500</td>\n",
+       "      <td>flames</td>\n",
+       "      <td>Fargo, ND</td>\n",
+       "      <td>You were just waiting for us to go down in flames</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1632</th>\n",
+       "      <td>5504</td>\n",
+       "      <td>flames</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>This is gonna go down in flames ?? https://t.c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1633</th>\n",
+       "      <td>5508</td>\n",
+       "      <td>flames</td>\n",
+       "      <td>Here, There &amp; Everywhere..</td>\n",
+       "      <td>I'm listening to 'Zion' by Flames on #Pandora ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1634</th>\n",
+       "      <td>5511</td>\n",
+       "      <td>flattened</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>I think that's been the best bit of this match...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1635</th>\n",
+       "      <td>5512</td>\n",
+       "      <td>flattened</td>\n",
+       "      <td>support all girls!</td>\n",
+       "      <td>why would anyone want to hear some type of shi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id    keyword                    location  \\\n",
+       "1631  5500     flames                   Fargo, ND   \n",
+       "1632  5504     flames                         NaN   \n",
+       "1633  5508     flames  Here, There & Everywhere..   \n",
+       "1634  5511  flattened                         NaN   \n",
+       "1635  5512  flattened          support all girls!   \n",
+       "\n",
+       "                                                   text  \n",
+       "1631  You were just waiting for us to go down in flames  \n",
+       "1632  This is gonna go down in flames ?? https://t.c...  \n",
+       "1633  I'm listening to 'Zion' by Flames on #Pandora ...  \n",
+       "1634  I think that's been the best bit of this match...  \n",
+       "1635  why would anyone want to hear some type of shi...  "
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "id": "506eaa38",
    "metadata": {},
@@ -400,6 +498,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 156,
+   "id": "fb9490e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "For argument \"inplace\" expected type bool, received type str.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-156-56c4ba484da1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeyword\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'body%20bags'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/berkeley/berkeley/lib/python3.7/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mdropna\u001b[0;34m(self, axis, inplace, how)\u001b[0m\n\u001b[1;32m   4863\u001b[0m         \u001b[0mdtype\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4864\u001b[0m         \"\"\"\n\u001b[0;32m-> 4865\u001b[0;31m         \u001b[0minplace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidate_bool_kwarg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"inplace\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4866\u001b[0m         \u001b[0;31m# Validate the axis parameter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4867\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/berkeley/berkeley/lib/python3.7/site-packages/pandas/util/_validators.py\u001b[0m in \u001b[0;36mvalidate_bool_kwarg\u001b[0;34m(value, arg_name, none_allowed, int_allowed)\u001b[0m\n\u001b[1;32m    240\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mgood_value\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m         raise ValueError(\n\u001b[0;32m--> 242\u001b[0;31m             \u001b[0;34mf'For argument \"{arg_name}\" expected type bool, received '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    243\u001b[0m             \u001b[0;34mf\"type {type(value).__name__}.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m         )\n",
+      "\u001b[0;31mValueError\u001b[0m: For argument \"inplace\" expected type bool, received type str."
+     ]
+    }
+   ],
+   "source": [
+    "dat[dat.keyword.dropna(inplace='n').str.contains('body%20bags')]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "id": "22f05bfa",
    "metadata": {},
@@ -735,15 +857,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "073e04b8",
-   "metadata": {},
-   "source": [
-    "# reference\n",
-    "https://necromuralist.github.io/Neurotic-Networking/posts/nlp/01-twitter-preprocessing-with-nltk/"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "d9aad92c",
@@ -766,6 +879,15 @@
     "    \"\"\"\n",
     "    return stem(tokenize(text))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "073e04b8",
+   "metadata": {},
+   "source": [
+    "# reference\n",
+    "https://necromuralist.github.io/Neurotic-Networking/posts/nlp/01-twitter-preprocessing-with-nltk/"
    ]
   },
   {
