--- a/Ben-EDA.ipynb
+++ b/Ben-EDA.ipynb
@@ -7,25 +7,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from pprint import pprint\n",
-    "from matplotlib import pyplot as plt\n",
-    "import re\n",
-    "import collections\n",
-    "import itertools\n",
+    "%matplotlib inline\n",
     "\n",
+    "# General libraries.\n",
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# SK-learn libraries for learning.\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.naive_bayes import BernoulliNB\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.cluster import *\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# SK-learn Decomp\n",
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "# SK-learn libraries for feature extraction from text.\n",
     "from sklearn.feature_extraction.text import *\n",
     "\n",
+    "# NLP processors\n",
     "import nltk\n",
-    "from nltk.stem.porter import PorterStemmer\n",
-    "from nltk.tokenize import TweetTokenizer # Tokenizer in NLTK that is meant for tweets. We will be implementing.\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.tokenize import TweetTokenizer\n",
+    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('punkt')\n",
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
@@ -879,6 +891,263 @@
     "    \"\"\"\n",
     "    return stem(tokenize(text))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7126db5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#read in data\n",
+    "# df = pd.read_csv(r'C:\\Users\\lwu31\\OneDrive - JNJ\\Documents\\train.csv')\n",
+    "df = pd.read_csv('data/nlp-getting-started/train.csv')\n",
+    "# sample the data, acts as shuffling the data on row\n",
+    "\n",
+    "#50/50 split between train and dev\n",
+    "# allocate more for traiing if we do it this way, i'll run some\n",
+    "# analysis to see if my cluster bootstrap can imrpove the models we run.\n",
+    "numtest = int(len(df)/3.5)\n",
+    "df_train = df[numtest:].reset_index(drop=True)\n",
+    "df_test = df[:int(numtest/2)].reset_index(drop=True)\n",
+    "df_dev = df[int(numtest/2):numtest].reset_index(drop=True)\n",
+    "\n",
+    "train_data, train_label = df_train.text, df_train.target\n",
+    "dev_data, dev_label = df_dev.text, df_dev.target\n",
+    "test_data, test_label = df_test.text, df_test.target\n",
+    "\n",
+    "#split into disaster and non disaster data\n",
+    "df_neg = df_train.loc[df_train.target == 0]\n",
+    "df_pos = df_train.loc[df_train.target == 1]\n",
+    "\n",
+    "#split into disaster and nondisaster tweets only\n",
+    "neg_text = df_neg.text\n",
+    "pos_text = df_pos.text\n",
+    "\n",
+    "print(\"Some data metrics\\n\")\n",
+    "print(\"Shape of train data:\", df_train.shape)\n",
+    "print(\"\\nMissing data in each column:\\n\" + str(df.isnull().sum()))\n",
+    "print(\"\\nNumber of disaster tweets:\\n\"+ str(train_label.value_counts()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b37cfe3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(text, stop_words):\n",
+    "    #remove line breaks\n",
+    "    text = re.sub(r\"\\n\",\"\",text)\n",
+    "\n",
+    "    #convert to lowercase \n",
+    "    text = text.lower()\n",
+    "\n",
+    "    #remove digits and currencies \n",
+    "    text = re.sub(r\"\\d+\",\"\",text) \n",
+    "    text = re.sub(r'[\\$\\d+\\d+\\$]', \"\", text)      \n",
+    "\n",
+    "    #remove dates \n",
+    "    text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
+    "    text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
+    "    text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
+    "\n",
+    "    #remove non-ascii\n",
+    "    text = re.sub(r'[^\\x00-\\x7f]',r' ',text) \n",
+    "\n",
+    "    #remove punctuation\n",
+    "    text = re.sub(r'[^\\w\\s]','',text) \n",
+    "\n",
+    "    #remove hyperlinks\n",
+    "    #text = re.sub(r'https?:\\/\\/.*[\\r\\n]*', '', text)\n",
+    "    text = re.sub(r'http\\S+', '', text, flags=re.MULTILINE)\n",
+    "    \n",
+    "    # remove trailing spaces\n",
+    "    text = re.sub(r'[ \\t]+$','', text)\n",
+    "    \n",
+    "    # remove stop words, yea don't remove stop words.\n",
+    "    # filtered_tokens = [word for word in word_tokenize(text) if not word in stop_words]\n",
+    "    # text = (\"\").join(filtered_tokens)\n",
+    "\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cffda279",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preprocess data-> split normally\n",
+    "# set random seed\n",
+    "np.random.seed(0)\n",
+    "df_ = df.sample(frac=1).reset_index()\n",
+    "\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "processed_full = []\n",
+    "for i in df_.text:\n",
+    "    processed_full.append(preprocess(i,stop_words))\n",
+    "df_.text = processed_full\n",
+    "\n",
+    "numtest = int(len(df_)/3.5)\n",
+    "df_train = df_[numtest:].reset_index(drop=True)\n",
+    "df_test = df_[:int(numtest/2)].reset_index(drop=True)\n",
+    "df_dev = df_[int(numtest/2):numtest].reset_index(drop=True)\n",
+    "\n",
+    "train_data, train_label = np.array(df_train.text), np.array(df_train.target)\n",
+    "dev_data, dev_label = np.array(df_dev.text), np.array(df_dev.target)\n",
+    "test_data, test_label = np.array(df_test.text), np.array(df_test.target)\n",
+    "# Naive Bayes example run, using non clustered data first.\n",
+    "# I'll use TF-IDF in this to vectorize data.\n",
+    "\n",
+    "tfidf = TfidfVectorizer()\n",
+    "t_data = tfidf.fit_transform(train_data)\n",
+    "dt_data = tfidf.transform(dev_data)\n",
+    "tt_data = tfidf.transform(test_data)\n",
+    "m_nb = MultinomialNB(alpha=0.9).fit(t_data, train_label) # best alpha from project 3\n",
+    "pred = m_nb.predict(dt_data)\n",
+    "pred_test = m_nb.predict(tt_data)\n",
+    "print('Metrics by normal splitting')\n",
+    "print('Dev:')\n",
+    "print('F1 Score: {:.4f}'.format(metrics.f1_score(dev_label, pred, average='weighted')))\n",
+    "print('Accuracy: {:.4f}'.format(metrics.accuracy_score(dev_label, pred)))\n",
+    "print('Test:')\n",
+    "print('F1 Score: {:.4f}'.format(metrics.f1_score(test_label, pred_test, average='weighted')))\n",
+    "print('Accuracy: {:.4f}'.format(metrics.accuracy_score(test_label, pred_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e92e9d68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cluster_boot(df, n_clusters=2):\n",
+    "    # Must accept pre-processed data as DF\n",
+    "    \n",
+    "    \"\"\" Pre-Cluster data before splitting to enhance generalization\"\"\"\n",
+    "    dat = df.text\n",
+    "    tfidf = TfidfVectorizer()\n",
+    "    t_data = tfidf.fit_transform(dat)\n",
+    "    pca = \n",
+    "    cluster = KMeans(n_clusters=n_clusters).fit(t_data) # really bad clustering for loo\n",
+    "    df['assign'] = cluster.labels_\n",
+    "    \n",
+    "    if n_clusters == 2:\n",
+    "        if len(df[df['assign']==1]) > len(df[df['assign']==0]):\n",
+    "            s, l = 0, 1\n",
+    "        else:\n",
+    "            s, l = 1, 0\n",
+    "        len_valid = int(len(df[df['assign']==s])/2)\n",
+    "        df_test = df[df['assign']==s][:len_valid].reset_index(drop=True)\n",
+    "        df_dev = df[df['assign']==s][len_valid:].reset_index(drop=True)\n",
+    "        df_train = df[df['assign']==l].reset_index(drop=True)\n",
+    "    else:\n",
+    "        groups = [] # list of two tuples of clusters\n",
+    "        centroids = cluster.cluster_centers_\n",
+    "    \n",
+    "    # Simple prelim:: Sparse matrix for Spectral Clustering\n",
+    "    # if cluster is more than 2 then use the majority of clusters\n",
+    "    # closest to each other as training set and the rest as dev/test\n",
+    "    # notes: this method did not work, the spectral takes too long for\n",
+    "    # this size of a sparse matrix.\n",
+    "    #     elif typ == 'cv':\n",
+    "    #         cv = CountVectorizer()\n",
+    "    #         t_data = cv.fit_transform(dat)\n",
+    "    #         cluster = SpectralClustering(n_clusters=2).fit(t_data)\n",
+    "    return (df_train, df_dev, df_test)\n",
+    "\n",
+    "df_train,df_dev,df_test = cluster_boot(df_)\n",
+    "train_data, train_label = np.array(df_train.text), np.array(df_train.target)\n",
+    "dev_data, dev_label = np.array(df_dev.text), np.array(df_dev.target)\n",
+    "test_data, test_label = np.array(df_test.text), np.array(df_test.target)\n",
+    "tfidf = TfidfVectorizer()\n",
+    "t_data = tfidf.fit_transform(train_data)\n",
+    "dt_data = tfidf.transform(dev_data)\n",
+    "tt_data = tfidf.transform(test_data)\n",
+    "m_nb = MultinomialNB(alpha=0.9).fit(t_data, train_label) # best alpha from project 3\n",
+    "pred = m_nb.predict(dt_data)\n",
+    "pred_t = m_nb.predict(tt_data)\n",
+    "print('Metrics by cluster-splitting')\n",
+    "print('F1 Score: {:.4f}'.format(metrics.f1_score(dev_label, pred, average='weighted')))\n",
+    "print('Accuracy: {:.4f}'.format(metrics.accuracy_score(dev_label, pred)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c3bbd5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TESTING \n",
+    "dat = df_.text\n",
+    "tfidf = TfidfVectorizer()\n",
+    "t_data = tfidf.fit_transform(dat)\n",
+    "# not doing LSA, performing SVD is only for sake of cluster.. \n",
+    "# due to very sparse data it is difficult to cluster on KMeans, \n",
+    "# so we SVD I.E sparse->sparse to reduce dimensions\n",
+    "svd = TruncatedSVD()\n",
+    "t_data = svd.fit_transform(t_data)\n",
+    "cluster = KMeans(n_clusters=2).fit(t_data) # really bad clustering for loo\n",
+    "\n",
+    "df['assign'] = cluster.labels_\n",
+    "if len(df[df['assign']==1]) > len(df[df['assign']==0]):\n",
+    "    s, l = 0, 1\n",
+    "else:\n",
+    "    s, l = 1, 0\n",
+    "len_valid = int(len(df[df['assign']==s])/2)\n",
+    "df_test = df[df['assign']==s][:len_valid].reset_index(drop=True)\n",
+    "df_dev = df[df['assign']==s][len_valid:].reset_index(drop=True)\n",
+    "df_train = df[df['assign']==l].reset_index(drop=True)\n",
+    "\n",
+    "train_data, train_label = np.array(df_train.text), np.array(df_train.target)\n",
+    "dev_data, dev_label = np.array(df_dev.text), np.array(df_dev.target)\n",
+    "test_data, test_label = np.array(df_test.text), np.array(df_test.target)\n",
+    "tfidf = TfidfVectorizer()\n",
+    "t_data = tfidf.fit_transform(train_data)\n",
+    "dt_data = tfidf.transform(dev_data)\n",
+    "tt_data = tfidf.transform(test_data)\n",
+    "m_nb = MultinomialNB(alpha=0.9).fit(t_data, train_label) # best alpha from project 3\n",
+    "pred = m_nb.predict(dt_data)\n",
+    "pred_t = m_nb.predict(tt_data)\n",
+    "print('Metrics by cluster-splitting')\n",
+    "print('F1 Score: {:.4f}'.format(metrics.f1_score(dev_label, pred, average='weighted')))\n",
+    "print('Accuracy: {:.4f}'.format(metrics.accuracy_score(dev_label, pred)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c863f12f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dat = df.text\n",
+    "tfidf = TfidfVectorizer()\n",
+    "t_data = tfidf.fit_transform(dat)\n",
+    "# not doing LSA, performing SVD is only for sake of cluster.. \n",
+    "# due to very sparse data it is difficult to cluster on KMeans, \n",
+    "# so we SVD I.E sparse->sparse to reduce dimensions\n",
+    "svd = TruncatedSVD()\n",
+    "t_data = svd.fit_transform(t_data)\n",
+    "cluster = KMeans(n_clusters=6).fit(t_data) # really bad clustering for loo\n",
+    "cluster.cluster_centers_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10cff311",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15, 15))\n",
+    "plt.spy(t_data,markersize=1)"
    ]
   },
   {
