Adding Bernoulli NB without cross-validation for comparison

--- a/Aastha_EDA.ipynb
+++ b/Aastha_EDA.ipynb
@@ -1995,6 +1995,47 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ty2FTvjfx3Y9",
+        "outputId": "d5983304-e4ba-4ce8-bd99-9bb0430130da"
+      },
+      "source": [
+        "data_2 = train_data[train_data.target.notna()]\n",
+        "data_2 = data_2[data_2.text.notna()]\n",
+        "\n",
+        "labels_2 = np.array(data_2.target)\n",
+        "data_2 = np.array(data_2.text)\n",
+        "\n",
+        "boundary = int(len(data_2) * .8)\n",
+        "train_data_2 = data_2[0:boundary]\n",
+        "dev_data_2 = data_2[boundary:]\n",
+        "train_labels_2 = labels_2[0:boundary]\n",
+        "dev_labels_2 = labels_2[boundary:]\n",
+        "\n",
+        "tfidf_2 = TfidfVectorizer()\n",
+        "transformed_train_data = tfidf_2.fit_transform(train_data_2)\n",
+        "transformed_dev_data = tfidf_2.transform(dev_data_2)\n",
+        "\n",
+        "model_2 = BernoulliNB().fit(transformed_train_data, train_labels_2)\n",
+        "pred = model_2.predict(transformed_dev_data)\n",
+        "print('Accuracy: {:.4f}'.format(metrics.accuracy_score(dev_labels_2, pred)))\n"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.7997\n"
+          ]
+        }
+      ]
     }
   ]
 }
