stem vs. lemm vs. no suffix- strip

--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,9 +54,8 @@
     "# NLP processors\n",
     "import nltk\n",
     "from nltk.tokenize import TweetTokenizer\n",
-    "from nltk.corpus import stopwords\n",
-    "nltk.download('stopwords')\n",
-    "nltk.download('punkt')\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.stem import PorterStemmer\n",
     "from nltk.tokenize import word_tokenize"
    ]
   },
@@ -223,11 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess(text, stop_words):\n",
+    "def preprocess(text, method=None, tokenizer=None):\n",
     "    #remove line breaks\n",
     "    text = re.sub(r\"\\n\",\"\",text)\n",
     "\n",
@@ -256,11 +255,21 @@
     "    # remove trailing spaces\n",
     "    text = re.sub(r'[ \\t]+$','', text)\n",
     "    \n",
+    "    if method.lower() == 'l':\n",
+    "        lemmer = WordNetLemmatizer()\n",
+    "        lemm_tokens = [lemmer.lemmatize(word) for word in tokenizer(text)]\n",
+    "        return \" \".join(lemm_tokens)\n",
+    "    \n",
+    "    elif method.lower() == 's':\n",
+    "        porter = PorterStemmer()\n",
+    "        stem_tokens = [porter.stem(word) for word in tokenizer(text)]\n",
+    "        return \" \".join(stem_tokens)\n",
+    "    \n",
+    "    return text\n",
+    "\n",
     "    # remove stop words, yea don't remove stop words.\n",
     "    # filtered_tokens = [word for word in word_tokenize(text) if not word in stop_words]\n",
-    "    # text = (\"\").join(filtered_tokens)\n",
-    "\n",
-    "    return text"
+    "    # text = (\"\").join(filtered_tokens)"
    ]
   },
   {
@@ -268,139 +277,6 @@
    "metadata": {},
    "source": [
     "#### Clean the data and strip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 446,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# preprocess data-> split normally\n",
-    "# set random seed\n",
-    "np.random.seed(0)\n",
-    "df_ = df.sample(frac=1).reset_index()\n",
-    "\n",
-    "stop_words = set(stopwords.words('english'))\n",
-    "processed_full = []\n",
-    "for i in df_.text:\n",
-    "    processed_full.append(preprocess(i,stop_words))\n",
-    "df_.text = processed_full\n",
-    "\n",
-    "numtest = int(len(df_)/3.5)\n",
-    "df_train = df_[numtest:].reset_index(drop=True)\n",
-    "df_test = df_[:int(numtest/2)].reset_index(drop=True)\n",
-    "df_dev = df_[int(numtest/2):numtest].reset_index(drop=True)\n",
-    "\n",
-    "train_data, train_label = np.array(df_train.text), np.array(df_train.target)\n",
-    "dev_data, dev_label = np.array(df_dev.text), np.array(df_dev.target)\n",
-    "test_data, test_label = np.array(df_test.text), np.array(df_test.target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 429,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Metrics by normal splitting\n",
-      "Dev:\n",
-      "F1 Score: 0.8155\n",
-      "Accuracy: 0.8199\n",
-      "Test:\n",
-      "F1 Score: 0.7856\n",
-      "Accuracy: 0.7930\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Naive Bayes example run, using non clustered data first.\n",
-    "# I'll use TF-IDF in this to vectorize data.\n",
-    "\n",
-    "tfidf = TfidfVectorizer()\n",
-    "t_data = tfidf.fit_transform(train_data)\n",
-    "dt_data = tfidf.transform(dev_data)\n",
-    "tt_data = tfidf.transform(test_data)\n",
-    "m_nb = MultinomialNB(alpha=0.9).fit(t_data, train_label) # best alpha from project 3\n",
-    "pred = m_nb.predict(dt_data)\n",
-    "pred_test = m_nb.predict(tt_data)\n",
-    "print('Metrics by normal splitting')\n",
-    "print('Dev:')\n",
-    "print('F1 Score: {:.4f}'.format(metrics.f1_score(dev_label, pred, average='weighted')))\n",
-    "print('Accuracy: {:.4f}'.format(metrics.accuracy_score(dev_label, pred)))\n",
-    "print('Test:')\n",
-    "print('F1 Score: {:.4f}'.format(metrics.f1_score(test_label, pred_test, average='weighted')))\n",
-    "print('Accuracy: {:.4f}'.format(metrics.accuracy_score(test_label, pred_test)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 318,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Metrics by cluster-splitting\n",
-      "F1 Score: 0.8201\n",
-      "Accuracy: 0.8452\n"
-     ]
-    }
-   ],
-   "source": [
-    "def cluster_boot(df, n_clusters=2):\n",
-    "    # Must accept pre-processed data as DF\n",
-    "    \n",
-    "    \"\"\" Pre-Cluster data before splitting to enhance generalization\"\"\"\n",
-    "    dat = df.text\n",
-    "    tfidf = TfidfVectorizer()\n",
-    "    t_data = tfidf.fit_transform(dat)\n",
-    "    pca = \n",
-    "    cluster = KMeans(n_clusters=n_clusters).fit(t_data) # really bad clustering for loo\n",
-    "    df['assign'] = cluster.labels_\n",
-    "    \n",
-    "    if n_clusters == 2:\n",
-    "        if len(df[df['assign']==1]) > len(df[df['assign']==0]):\n",
-    "            s, l = 0, 1\n",
-    "        else:\n",
-    "            s, l = 1, 0\n",
-    "        len_valid = int(len(df[df['assign']==s])/2)\n",
-    "        df_test = df[df['assign']==s][:len_valid].reset_index(drop=True)\n",
-    "        df_dev = df[df['assign']==s][len_valid:].reset_index(drop=True)\n",
-    "        df_train = df[df['assign']==l].reset_index(drop=True)\n",
-    "    else:\n",
-    "        groups = [] # list of two tuples of clusters\n",
-    "        centroids = cluster.cluster_centers_\n",
-    "    \n",
-    "    # Simple prelim:: Sparse matrix for Spectral Clustering\n",
-    "    # if cluster is more than 2 then use the majority of clusters\n",
-    "    # closest to each other as training set and the rest as dev/test\n",
-    "    # notes: this method did not work, the spectral takes too long for\n",
-    "    # this size of a sparse matrix.\n",
-    "    #     elif typ == 'cv':\n",
-    "    #         cv = CountVectorizer()\n",
-    "    #         t_data = cv.fit_transform(dat)\n",
-    "    #         cluster = SpectralClustering(n_clusters=2).fit(t_data)\n",
-    "    return (df_train, df_dev, df_test)\n",
-    "\n",
-    "df_train,df_dev,df_test = cluster_boot(df_)\n",
-    "train_data, train_label = np.array(df_train.text), np.array(df_train.target)\n",
-    "dev_data, dev_label = np.array(df_dev.text), np.array(df_dev.target)\n",
-    "test_data, test_label = np.array(df_test.text), np.array(df_test.target)\n",
-    "tfidf = TfidfVectorizer()\n",
-    "t_data = tfidf.fit_transform(train_data)\n",
-    "dt_data = tfidf.transform(dev_data)\n",
-    "tt_data = tfidf.transform(test_data)\n",
-    "m_nb = MultinomialNB(alpha=0.9).fit(t_data, train_label) # best alpha from project 3\n",
-    "pred = m_nb.predict(dt_data)\n",
-    "pred_t = m_nb.predict(tt_data)\n",
-    "print('Metrics by cluster-splitting')\n",
-    "print('F1 Score: {:.4f}'.format(metrics.f1_score(dev_label, pred, average='weighted')))\n",
-    "print('Accuracy: {:.4f}'.format(metrics.accuracy_score(dev_label, pred)))\n"
    ]
   },
   {
